// cart-service/proto/cart/cart.proto

syntax = "proto3";

package order;

option go_package = "proto/order";

service OrderService{
	rpc Order(OrderRequest) returns (OrderResponse){}
	rpc GetSales(GetRequest) returns (GetResponse){}
	rpc GetOrders(GetRequest) returns (GetResponse){}
	rpc GetSingleOrder(GetSingleRequest) returns (GetSingleResponse){}
}

message Order{
	string id = 1;
	string user_id = 2;
	repeated Product products = 3;
	int32 sub_total = 4;
	int32 shipping_fee = 5;
	int32 taxes = 6;
	int32 total = 7;
}

message Product{
	string id = 1;
	bool disponible = 2;
	string title = 3;
	int32 price = 4;
	Photo photo = 5;
	string category = 6;
	string size = 7;
	Color color1 = 8;
	Color color2 = 9;
	string brand = 10;
	string condition = 11;
	string material = 12;
	string owner_id = 13;
}

message Photo{
	string id = 1;
	string url = 2;
	bool is_main = 3;
	int32 height = 4;
	int32 width = 5;
}

message Color{
	string id = 1;
	string name = 2;
	string hex_code = 3;
	string image = 4;
}

message OrderRequest{
	string user_id = 1;
	Order order = 2;
}

message OrderResponse{
	bool added = 1;
}

message DeleteFromOrderRequest{
	string user_id = 1;
	Product product = 2;
}

message DeleteFromOrderResponse{
	bool deleted = 1;
}

message GetRequest{
	string user_id = 1;
}

message GetResponse{
	repeated Order orders = 1;
}

message GetSingleRequest{
	string order_id = 1;
}

message GetSingleResponse{
	Order order = 1;
}